samples/_failures_safe/1761525757_a10b02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85be31ea.c: In function ‘main’:
./samples/SAFE/__tmp_85be31ea.c:135:37: error: expected ‘)’ at end of input
  135 |         if (entries[i].severity >= 4
      |            ~                        ^
      |                                     )
./samples/SAFE/__tmp_85be31ea.c:135:9: error: expected declaration or statement at end of input
  135 |         if (entries[i].severity >= 4
      |         ^~
./samples/SAFE/__tmp_85be31ea.c:135:9: error: expected declaration or statement at end of input
